test/semantic_errors/invalid_assignment3.mc
void main() {
    bool b;
    b = 'c'; /* cannot assign char to bool */
}